k8s/ux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vnext-ux
  namespace: vnext-app
spec:
  selector:
    app: vnext-ux
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
