k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vnext-app
  namespace: vnext-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vnext-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vnext-ux
                port:
                  number: 80
